header fix and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -9,12 +9,12 @@ h1, h2 {
   color: #3f1622;
 }
 
-header nav ol li {
+nav ol li {
   font-family: "PT Sans", sans-serif;
   color: #8f2440;
   list-style-type: none;
   text-decoration: none;
-  font-weight:bold;
+  font-weight: bold;
   font-size: 1.125rem;
 }
 
